# HLPLF

./: .gitignore  Pz1_HLPL.py  lb1.py  lb2.py  lb3.py  lb4.py  lb5.py  pyproject.toml  test_Pz1_HLPL.py
finance_project/: db.sqlite3  populate_data.py  pyproject.toml
finance_project/finance_project/: settings.py  urls.py
finance_project/templates/: base.html
finance_project/transactions/: admin.py  filters.py  models.py  urls.py  views.py
finance_project/transactions/migrations/: 0001_initial.py
finance_project/transactions/templates/transactions/: transaction_list.html
pz1_level3_4/: package-lock.json
pz1_level3_4/react-app/: package-lock.json
pz1_level3_4/react-app/src/: App.css  App.jsx
pz2_level1_task5/: data.json  index.html
pz2_level2_task5/: validate.js
pz2_level3_4/react-app/src/: App.js
