[project]
name = "python-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Rostyslav",email = "rost.tarasov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14.1 || >3.14.1"
dependencies = [
    "networkx (>=3.6.1,<4.0.0)",
    "matplotlib (<3.10)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
